--- a/style.css
+++ b/style.css
@@ -157,6 +157,7 @@ h3 {
   font-weight: 700;
   font-size: 20px;
   line-height: 25px;
+  letter-spacing: -0.045em;
   margin: 6px 0 5px;
 }
 
@@ -198,6 +199,7 @@ h3 {
 .gshow article {
   margin-left: auto;
 }
+
 .gshow article:nth-child(2) {
   margin: 45px 0 45px auto;
 }
